Added Home link

--- a/templates/hydrant.html
+++ b/templates/hydrant.html
@@ -26,6 +26,9 @@
 	  <h2>Did you know?</h2>
 	  {{Notes}}
 	{% endif %}
+	<p>
+	  <a href="http://www.drop2drink.org">Home</a>
+	</p>
   </body>
 </html>
 
